namespace ChargerLocker.Logger
{
    public interface ILogger
    {
        public void WriteToLog(string Message);

    }
}
